--- a/assets/__app.html
+++ b/assets/__app.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Svelte app</title>
+	<title>Wikipediaゲーム</title>
 
-	<meta name="theme-color" content="#E938C2">
-	<link rel="apple-touch-icon" href="images/touch-icons/logo-192.png">
-
-	<link rel="manifest" href="/manifest.json">
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 	<link rel="modulepreload" href="/build/main.js" />
