--- a/assets/__app.html
+++ b/assets/__app.html
@@ -11,6 +11,7 @@
 	<link rel="modulepreload" href="/build/main.js" />
 
 	<script type="module" src="/build/main.js"></script>
+	<script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 </head>
 
 <body>
